--- a/index.html
+++ b/index.html
@@ -249,6 +249,23 @@
   <div class="container">
     <div class="row section scrollspy">
       <h2 class="center orange-text" id="experience">Experience</h2>
+
+      <div class="col s12 m4">
+        <div class="icon-block">
+          <h2 class="center royal-text">
+            <i class="material-icons">print</i>
+          </h2>
+          <h5 class="center">Web Developer</h5>
+
+          <p class="center">Everykey Inc</p>
+          <p class="light">Dec 2018-Apr 2020</p>
+          <p>Modernized and refactored the marketing website to use NodeJS. Consolidated CSS and HTML to vastly improve maintainability.
+            Prototyped customer Administration Dashboard for managing 5-50 users.
+            Developed a secure backend for Admin Dashboard to handle users with multiple permission tiers.
+            Prototyped subscription onboarding and integration tools for upcoming subscription model rollout.</p>
+          <p></p>
+        </div>
+      </div>
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center royal-text">
@@ -257,7 +274,7 @@
           <h5 class="center">Teaching Assistant</h5>
 
           <p class="center">Case Western Reserve University</p>
-          <p>July 2018-Present</p>
+          <p>July 2018-Jan 2019</p>
           <p>Help students learn to code during an intensive 24-week, part-time full stack coding boot camp.
             Provide support and serve as a resource so students can build their problem-solving skills.
             Answer questions, give feedback, and grade assignments.</p>
@@ -272,30 +289,14 @@
           <h5 class="center">Social Media/Email Marketing Coordinator</h5>
 
           <p class="center">Lisa Renee's Dance and Enrichment Studios</p>
-          <p class="light">Jan 2018-Present</p>
+          <p class="light">Jan 2018-Dec 2018</p>
           <p>Design, manage, and execute social media and email marketing campaigns.
             Update website content and design as needed. Attend the front desk; welcome dancers
             into the studio and shoppers into the boutique.</p>
         </div>
       </div>
 
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center royal-text">
-            <i class="material-icons">print</i>
-          </h2>
-          <h5 class="center">Legal Assistant</h5>
 
-          <p class="center">The Costas Network Law Center</p>
-          <p class="light">2014-2017</p>
-          <p>Specialized in humanitarian applications, drafting personal statements with clients
-            describing hardships. Collaborated with attorneys and legal assistants to meet deadlines
-            and prepare cases. Managed 150+ caseload and delegated tasks to legal assistants. Provided
-            a high level of customer service in Spanish and English. Trained and mentored new legal
-            assistants and interns.</p>
-          <p></p>
-        </div>
-      </div>
     </div>
 
 
