more center align all the time

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           <h5 class="center">Web Developer</h5>
 
           <p class="center">Everykey Inc</p>
-          <p class="light">Dec 2018-Apr 2020</p>
+          <p class="center">Dec 2018-Apr 2020</p>
           <p>Modernized and refactored the marketing website to use NodeJS. Consolidated CSS and HTML to vastly improve maintainability.
             Prototyped customer Administration Dashboard for managing 5-50 users.
             Developed a secure backend for Admin Dashboard to handle users with multiple permission tiers.
@@ -274,7 +274,7 @@
           <h5 class="center">Teaching Assistant</h5>
 
           <p class="center">Case Western Reserve University</p>
-          <p>July 2018-Jan 2019</p>
+          <p class="center">July 2018-Jan 2019</p>
           <p>Help students learn to code during an intensive 24-week, part-time full stack coding boot camp.
             Provide support and serve as a resource so students can build their problem-solving skills.
             Answer questions, give feedback, and grade assignments.</p>
@@ -289,7 +289,7 @@
           <h5 class="center">Social Media/Email Marketing Coordinator</h5>
 
           <p class="center">Lisa Renee's Dance and Enrichment Studios</p>
-          <p class="light">Jan 2018-Dec 2018</p>
+          <p class="center">Jan 2018-Dec 2018</p>
           <p>Design, manage, and execute social media and email marketing campaigns.
             Update website content and design as needed. Attend the front desk; welcome dancers
             into the studio and shoppers into the boutique.</p>
